--- a/styles prefixed.css
+++ b/styles prefixed.css
@@ -38,9 +38,15 @@ body{
   margin-bottom: 2vh;
 }
 .button span {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
 }
 .button:hover{
@@ -86,16 +92,21 @@ h4{
 
 /* mobile styles */
 .grid{
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: repeat(12, 1fr);
   box-sizing: border-box;
-  grid-template-rows: repeat(24, 1fr);
+  -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-rows: repeat(24, 1fr);
   height: 100vh;
   width: 100vw;
 }
 
 .grid h2{
-  grid-column: 2 / span 10;
+  -ms-grid-column-span: 10;
+  -ms-grid-column: 2;
+      grid-column: 2 / span 10;
 }
 .site-nav{
   margin: 0 20px;
@@ -104,17 +115,24 @@ h4{
   display: none;
 }
 .welcome-text{
-  grid-column: 3 / span 8;
+  -ms-grid-column-span: 8;
+  -ms-grid-column: 3;
+      grid-column: 3 / span 8;
   font-size: auto;
-  grid-row: 20/ span 4;
-  align-self: flex-end;
+  -ms-grid-row-span: 4;
+  -ms-grid-row: 20;
+      grid-row: 20/ span 4;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 .tiny {
   height: 40%;
   vertical-align: center;
 }
 .header{
-  grid-column: 2 / span 10;
+  -ms-grid-column-span: 10;
+  -ms-grid-column: 2;
+      grid-column: 2 / span 10;
 }
 #logo{
   padding: 20px;
@@ -166,17 +184,27 @@ h4{
 }
 #about-us h2{
   text-align: center;
-  grid-row: 2 / span 3;
+  -ms-grid-row-span: 3;
+  -ms-grid-row: 2;
+      grid-row: 2 / span 3;
 }
 #about-us .first-half-vertical{
-  grid-row: 6 / span 9;
-  grid-column: 1 /span 12;
+  -ms-grid-row-span: 9;
+  -ms-grid-row: 6;
+      grid-row: 6 / span 9;
+  -ms-grid-column-span: 12;
+  -ms-grid-column: 1;
+      grid-column: 1 /span 12;
   margin: 0 20px;
   color: #939393;
 }
 #about-us .second-half-vertical{
-  grid-row: 16 / span 9;
-  grid-column: 1 /span 12;
+  -ms-grid-row-span: 9;
+  -ms-grid-row: 16;
+      grid-row: 16 / span 9;
+  -ms-grid-column-span: 12;
+  -ms-grid-column: 1;
+      grid-column: 1 /span 12;
   margin: 0 3%;
   color: #939393;
 }
@@ -184,7 +212,9 @@ h4{
   height: 90%;
   width: 45%;
   font-size: 0.6em;
-  align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 #about-us .wrapper{
@@ -198,53 +228,82 @@ h4{
 }
 .flex {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 #packages{
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
+  background: -webkit-linear-gradient(top, #FEE2E2 0%, #FEDFDF 80.73%, #FCCCCC 100%);
   background: linear-gradient(180deg, #FEE2E2 0%, #FEDFDF 80.73%, #FCCCCC 100%);
 }
 #packages h2{
   text-align: center;
-  grid-row: 2 / span 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-row: 2;
+      grid-row: 2 / span 2;
 }
 
 #packages .cards {
-  grid-row: 4 / span 17;
-  grid-column: 2 / span 10;
+  -ms-grid-row-span: 17;
+  -ms-grid-row: 4;
+      grid-row: 4 / span 17;
+  -ms-grid-column-span: 10;
+  -ms-grid-column: 2;
+      grid-column: 2 / span 10;
 }
 
 #packages .button{
-  grid-column: 2 / span 10;
-  grid-row: 21 / span 5;
+  -ms-grid-column-span: 10;
+  -ms-grid-column: 2;
+      grid-column: 2 / span 10;
+  -ms-grid-row-span: 5;
+  -ms-grid-row: 21;
+      grid-row: 21 / span 5;
   margin: auto;
 }
 #packages .container {
+  display: -ms-grid;
   display: grid;
   height: 100%;
+  -ms-grid-rows: 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(4, 1fr);
   gap: 5%;
 }
 #packages .card{
    background: white;
    border-radius: 27px;
+   -webkit-filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.05));
    filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.05));
 }
 #packages .card .container{
+  -ms-grid-columns: repeat(12, 1fr);
   grid-template-columns: repeat(12, 1fr);
   gap: 0;
 }
 #packages .card .container img{
   height: 100%;
-  grid-column: 2/ span 2;
-  grid-row: 2/ span 2;
+  -ms-grid-column-span: 2;
+  -ms-grid-column: 2;
+      grid-column: 2/ span 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-row: 2;
+      grid-row: 2/ span 2;
   margin: auto;
 }
 #packages .card .container div{
-  grid-column: 5/ span 7;
-  grid-row: 2/ span 2;
+  -ms-grid-column-span: 7;
+  -ms-grid-column: 5;
+      grid-column: 5/ span 7;
+  -ms-grid-row-span: 2;
+  -ms-grid-row: 2;
+      grid-row: 2/ span 2;
   text-align: left;
   color: #c1c1c1;
   vertical-align: middle;
@@ -255,44 +314,72 @@ h4{
   height: 90%;
 }
 #testimonials .grid {
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 #testimonials h2{
   text-align: center;
-  grid-row: 2 / span 3;
+  -ms-grid-row-span: 3;
+  -ms-grid-row: 2;
+      grid-row: 2 / span 3;
 }
 #testimonials video {
-  grid-column: 2 / span 10;
-  grid-row: 4 / span 7;
+  -ms-grid-column-span: 10;
+  -ms-grid-column: 2;
+      grid-column: 2 / span 10;
+  -ms-grid-row-span: 7;
+  -ms-grid-row: 4;
+      grid-row: 4 / span 7;
   height: 100%;
   width: 100%;
   border-radius: 27px;
 }
 #testimonials .cards {
-  grid-row: 12 / span 5;
-  grid-column: 1 / span 12;
+  -ms-grid-row-span: 5;
+  -ms-grid-row: 12;
+      grid-row: 12 / span 5;
+  -ms-grid-column-span: 12;
+  -ms-grid-column: 1;
+      grid-column: 1 / span 12;
 }
 #testimonials .cards .container {
   margin: 5%;
+  display: -ms-grid;
   display: grid;
   height: 100%;
+  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-columns: repeat(3, 1fr);
   gap: 5%;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 #testimonials .card{
   background: white;
   height: 100%;
   width: 100%;
-  filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.25));
+  -webkit-filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.25));
+          filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.25));
   border-radius: 10px;
 }
 #testimonials .cards .container .card{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
 }
 #testimonials .cards .container .card img{
@@ -304,16 +391,24 @@ h4{
   text-transform: uppercase;
 }
 #testimonials .summary {
-  grid-row: 19 / span 5;
-  grid-column: 2 / span 10;
+  -ms-grid-row-span: 5;
+  -ms-grid-row: 19;
+      grid-row: 19 / span 5;
+  -ms-grid-column-span: 10;
+  -ms-grid-column: 2;
+      grid-column: 2 / span 10;
   text-align: center;
   color: #636363;
   font-weight: 200;
   font-size: 0.8em;
 }
 #contact .banner{
-  grid-column: 2 / span 10;
-  grid-row: 2 / span 6;
+  -ms-grid-column-span: 10;
+  -ms-grid-column: 2;
+      grid-column: 2 / span 10;
+  -ms-grid-row-span: 6;
+  -ms-grid-row: 2;
+      grid-row: 2 / span 6;
   height: 100%;
   width: 100%;
   margin-top: -5%;
@@ -321,12 +416,25 @@ h4{
 }
 
 #contact form{
-  grid-row: 8 / span 15;
-  grid-column: 2 / span 10;
+  -ms-grid-row-span: 15;
+  -ms-grid-row: 8;
+      grid-row: 8 / span 15;
+  -ms-grid-column-span: 10;
+  -ms-grid-column: 2;
+      grid-column: 2 / span 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #contact form textarea {
@@ -471,10 +579,14 @@ h4{
     height: 100%;
   }
   #about-us .first-half-vertical .flex {
-    justify-content: start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
   }
   #about-us .second-half-vertical .flex{
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
   #about-us p{
     padding: 3em;
@@ -483,8 +595,12 @@ h4{
     width: auto;
   }
   #about-us .second-half-vertical{
-    grid-row: 15 / span 9;
-    grid-column: 1 /span 12;
+    -ms-grid-row-span: 9;
+    -ms-grid-row: 15;
+        grid-row: 15 / span 9;
+    -ms-grid-column-span: 12;
+    -ms-grid-column: 1;
+        grid-column: 1 /span 12;
     margin: 0 3%;
   }
   #about-us .first-half-vertical{
@@ -495,24 +611,36 @@ h4{
   }
 
   #packages .card .container {
-    grid-template-columns: repeat(24, 1fr);
-    grid-template-rows: 0;
+    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: repeat(24, 1fr);
+    -ms-grid-rows: 0;
+        grid-template-rows: 0;
   }
   #packages .card .container img{
     height: 70%;
     width: 70%;
   }
   #packages .card .container div{
-    grid-column: 5 / span 10;
+    -ms-grid-column-span: 10;
+    -ms-grid-column: 5;
+        grid-column: 5 / span 10;
     text-align: left;
     margin: auto 0;
   }
   #packages h2{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #packages {
+    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
     grid-template-rows: repeat(28, 1fr);
   }
 /* 
