--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ body{
 .button{
   background: var(--secondary);
   color: white;
-  width: 50%;
-  height: 40%;
+  width: 20em;
+  height: 5em;
   border-radius: 27px;
   text-transform: uppercase;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -38,15 +38,9 @@ body{
   margin-bottom: 2vh;
 }
 .button span {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   height: 100%;
 }
 .button:hover{
@@ -92,21 +86,16 @@ h4{
 
 /* mobile styles */
 .grid{
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-      grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: repeat(12, 1fr);
   box-sizing: border-box;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-      grid-template-rows: repeat(24, 1fr);
+  grid-template-rows: repeat(24, 1fr);
   height: 100vh;
   width: 100vw;
 }
 
 .grid h2{
-  -ms-grid-column-span: 10;
-  -ms-grid-column: 2;
-      grid-column: 2 / span 10;
+  grid-column: 2 / span 10;
 }
 .site-nav{
   margin: 0 20px;
@@ -115,24 +104,17 @@ h4{
   display: none;
 }
 .welcome-text{
-  -ms-grid-column-span: 8;
-  -ms-grid-column: 3;
-      grid-column: 3 / span 8;
+  grid-column: 3 / span 8;
   font-size: auto;
-  -ms-grid-row-span: 4;
-  -ms-grid-row: 20;
-      grid-row: 20/ span 4;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  grid-row: 20/ span 4;
+  align-self: flex-end;
 }
 .tiny {
   height: 40%;
   vertical-align: center;
 }
 .header{
-  -ms-grid-column-span: 10;
-  -ms-grid-column: 2;
-      grid-column: 2 / span 10;
+  grid-column: 2 / span 10;
 }
 #logo{
   padding: 20px;
@@ -184,27 +166,17 @@ h4{
 }
 #about-us h2{
   text-align: center;
-  -ms-grid-row-span: 3;
-  -ms-grid-row: 2;
-      grid-row: 2 / span 3;
+  grid-row: 2 / span 3;
 }
 #about-us .first-half-vertical{
-  -ms-grid-row-span: 9;
-  -ms-grid-row: 6;
-      grid-row: 6 / span 9;
-  -ms-grid-column-span: 12;
-  -ms-grid-column: 1;
-      grid-column: 1 /span 12;
+  grid-row: 6 / span 9;
+  grid-column: 1 /span 12;
   margin: 0 20px;
   color: #939393;
 }
 #about-us .second-half-vertical{
-  -ms-grid-row-span: 9;
-  -ms-grid-row: 16;
-      grid-row: 16 / span 9;
-  -ms-grid-column-span: 12;
-  -ms-grid-column: 1;
-      grid-column: 1 /span 12;
+  grid-row: 16 / span 9;
+  grid-column: 1 /span 12;
   margin: 0 3%;
   color: #939393;
 }
@@ -212,9 +184,7 @@ h4{
   height: 90%;
   width: 45%;
   font-size: 0.6em;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
 }
 
 #about-us .wrapper{
@@ -228,158 +198,100 @@ h4{
 }
 .flex {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-#packages{
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+#packages {
+  justify-content: center;
   text-align: center;
-  background: -webkit-linear-gradient(top, #FEE2E2 0%, #FEDFDF 80.73%, #FCCCCC 100%);
   background: linear-gradient(180deg, #FEE2E2 0%, #FEDFDF 80.73%, #FCCCCC 100%);
 }
 #packages h2{
   text-align: center;
-  -ms-grid-row-span: 2;
-  -ms-grid-row: 2;
-      grid-row: 2 / span 2;
+  grid-row: 2 / span 2;
 }
 
 #packages .cards {
-  -ms-grid-row-span: 17;
-  -ms-grid-row: 4;
-      grid-row: 4 / span 17;
-  -ms-grid-column-span: 10;
-  -ms-grid-column: 2;
-      grid-column: 2 / span 10;
+  grid-row: 4 / span 17;
+  grid-column: 2 / span 10;
 }
 
 #packages .button{
-  -ms-grid-column-span: 10;
-  -ms-grid-column: 2;
-      grid-column: 2 / span 10;
-  -ms-grid-row-span: 5;
-  -ms-grid-row: 21;
-      grid-row: 21 / span 5;
+  grid-column: 2 / span 10;
+  grid-row: 21 / span 5;
   margin: auto;
 }
 #packages .container {
-  display: -ms-grid;
   display: grid;
   height: 100%;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(4, 1fr);
   gap: 5%;
 }
 #packages .card{
    background: white;
    border-radius: 27px;
-   -webkit-filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.05));
    filter: drop-shadow(0px 8px 10px rgba(0, 0, 0, 0.05));
 }
 #packages .card .container{
-  -ms-grid-columns: repeat(12, 1fr);
   grid-template-columns: repeat(12, 1fr);
   gap: 0;
 }
-#packages .card .container img{
-  height: 100%;
-  -ms-grid-column-span: 2;
-  -ms-grid-column: 2;
-      grid-column: 2/ span 2;
-  -ms-grid-row-span: 2;
-  -ms-grid-row: 2;
-      grid-row: 2/ span 2;
-  margin: auto;
-}
 #packages .card .container div{
-  -ms-grid-column-span: 7;
-  -ms-grid-column: 5;
-      grid-column: 5/ span 7;
-  -ms-grid-row-span: 2;
-  -ms-grid-row: 2;
-      grid-row: 2/ span 2;
+  grid-column: 5/ span 7;
+  grid-row: 2/ span 2;
   text-align: left;
   color: #c1c1c1;
   vertical-align: middle;
   margin: auto;
 }
+#packages .card .container .wrapper{
+  grid-column: 2/ span 2;
+  grid-row: 2/ span 2;
+}
 .medium {
-  width: 90%;
-  height: 90%;
+  height: 42px;
+  width: 42px;
+  margin: auto;
 }
 #testimonials .grid {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 #testimonials h2{
   text-align: center;
-  -ms-grid-row-span: 3;
-  -ms-grid-row: 2;
-      grid-row: 2 / span 3;
+  grid-row: 2 / span 3;
 }
 #testimonials video {
-  -ms-grid-column-span: 10;
-  -ms-grid-column: 2;
-      grid-column: 2 / span 10;
-  -ms-grid-row-span: 7;
-  -ms-grid-row: 4;
-      grid-row: 4 / span 7;
+  grid-column: 2 / span 10;
+  grid-row: 4 / span 7;
   height: 100%;
   width: 100%;
   border-radius: 27px;
 }
 #testimonials .cards {
-  -ms-grid-row-span: 5;
-  -ms-grid-row: 12;
-      grid-row: 12 / span 5;
-  -ms-grid-column-span: 12;
-  -ms-grid-column: 1;
-      grid-column: 1 / span 12;
+  grid-row: 12 / span 5;
+  grid-column: 1 / span 12;
 }
 #testimonials .cards .container {
   margin: 5%;
-  display: -ms-grid;
   display: grid;
   height: 100%;
-  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-columns: repeat(3, 1fr);
   gap: 5%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 #testimonials .card{
   background: white;
   height: 100%;
   width: 100%;
-  -webkit-filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.25));
-          filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.25));
   border-radius: 10px;
 }
 #testimonials .cards .container .card{
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
   text-align: center;
 }
 #testimonials .cards .container .card img{
@@ -391,24 +303,16 @@ h4{
   text-transform: uppercase;
 }
 #testimonials .summary {
-  -ms-grid-row-span: 5;
-  -ms-grid-row: 19;
-      grid-row: 19 / span 5;
-  -ms-grid-column-span: 10;
-  -ms-grid-column: 2;
-      grid-column: 2 / span 10;
+  grid-row: 19 / span 5;
+  grid-column: 2 / span 10;
   text-align: center;
   color: #636363;
   font-weight: 200;
   font-size: 0.8em;
 }
 #contact .banner{
-  -ms-grid-column-span: 10;
-  -ms-grid-column: 2;
-      grid-column: 2 / span 10;
-  -ms-grid-row-span: 6;
-  -ms-grid-row: 2;
-      grid-row: 2 / span 6;
+  grid-column: 2 / span 10;
+  grid-row: 2 / span 6;
   height: 100%;
   width: 100%;
   margin-top: -5%;
@@ -416,25 +320,12 @@ h4{
 }
 
 #contact form{
-  -ms-grid-row-span: 15;
-  -ms-grid-row: 8;
-      grid-row: 8 / span 15;
-  -ms-grid-column-span: 10;
-  -ms-grid-column: 2;
-      grid-column: 2 / span 10;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  grid-row: 8 / span 15;
+  grid-column: 2 / span 10;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 #contact form textarea {
@@ -579,14 +470,10 @@ h4{
     height: 100%;
   }
   #about-us .first-half-vertical .flex {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: start;
+    justify-content: start;
   }
   #about-us .second-half-vertical .flex{
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    justify-content: flex-end;
   }
   #about-us p{
     padding: 3em;
@@ -595,12 +482,8 @@ h4{
     width: auto;
   }
   #about-us .second-half-vertical{
-    -ms-grid-row-span: 9;
-    -ms-grid-row: 15;
-        grid-row: 15 / span 9;
-    -ms-grid-column-span: 12;
-    -ms-grid-column: 1;
-        grid-column: 1 /span 12;
+    grid-row: 15 / span 9;
+    grid-column: 1 /span 12;
     margin: 0 3%;
   }
   #about-us .first-half-vertical{
@@ -611,36 +494,24 @@ h4{
   }
 
   #packages .card .container {
-    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-columns: repeat(24, 1fr);
-    -ms-grid-rows: 0;
-        grid-template-rows: 0;
+    grid-template-columns: repeat(24, 1fr);
+    grid-template-rows: 0;
   }
   #packages .card .container img{
     height: 70%;
     width: 70%;
   }
   #packages .card .container div{
-    -ms-grid-column-span: 10;
-    -ms-grid-column: 5;
-        grid-column: 5 / span 10;
+    grid-column: 5 / span 10;
     text-align: left;
     margin: auto 0;
   }
   #packages h2{
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   #packages {
-    -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-
     grid-template-rows: repeat(28, 1fr);
   }
 /* 
